--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "mongodb": "^3.6.9",
+    "mongoose": "^5.13.2",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
