--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "mongodb": "^3.6.9",
+    "mongodb-client-encryption": "^1.2.6",
     "mongoose": "^5.13.2",
     "next": "11.0.1",
     "react": "17.0.2",
